:bug: fix: ajuste link da imagem 1

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "O que devemos fazer quando a suposição de aprendizado supervisionado é inválida?\n",
     "\n",
-    "<img src=\"img/transfer_learning_digits.png\" width=\"700\"/>"
+    "<img src=\"./img/transfer_learning_digits.png\" width=\"700\"/>"
    ]
   },
   {
