:sparkles: feat: insert loss total of dann

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -30,53 +30,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cpu')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Setup\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "import os\n",
-    "import sys\n",
-    "import torch\n",
-    "# remove warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "plt.rcParams['font.size'] = 20\n",
-    "data_dir = os.path.expanduser('D:/Downloads/mda-datasets')\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "device"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "source": [
-    "##### Lembretes de teoria"
-   ]
+   "source": "##### Lembretes da teoria"
   },
   {
    "cell_type": "markdown",
@@ -300,7 +260,7 @@
     "Quando $\\mathcal{D}_S=\\mathcal{D}_T$ e $\\mathcal{T}_S=\\mathcal{T}_T$ estamos no cenário regular de aprendizado supervisionado\n",
     "que vimos até agora.\n",
     "\n",
-    "Por exemplo, dividindo o CIFAR-10 aleatoriamente em um conjunto de treinamento e teste.mathcal"
+    "Por exemplo, dividindo o CIFAR-10 aleatoriamente em um conjunto de treinamento e teste."
    ]
   },
   {
@@ -310,9 +270,7 @@
      "slide_type": "subslide"
     }
    },
-   "source": [
-    "#### Mesmo domínio, tarefa diferente"
-   ]
+   "source": "##### Mesmo domínio, tarefa diferente"
   },
   {
    "cell_type": "markdown",
@@ -511,6 +469,30 @@
     "- Portanto, podemos começar de um modelo pré-treinado e,\n",
     "    - \"Ajustar\" os filtros convolucionais, principalmente nas camadas mais profundas.\n",
     "    - Alterar o classificador (ou removê-lo completamente) para se adequar à nossa tarefa e treiná-lo do zero."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Setup\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import os\n",
+    "import sys\n",
+    "import torch\n",
+    "# remove warnings\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "plt.rcParams['font.size'] = 20\n",
+    "data_dir = os.path.expanduser('D:/Downloads/mda-datasets')\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device"
    ]
   },
   {
@@ -800,9 +782,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "##### Parte 2: Adaptação de domínio não supervisionada"
-   ]
+   "source": "##### Parte 2: Adaptação de domínio não supervisionada"
   },
   {
    "cell_type": "markdown",
@@ -820,6 +800,14 @@
     "A tarefa em ambos os casos é a classificação usual de 10 dígitos de classe.\n",
     "\n",
     "<img src=\"img/mnist_m.png\" />"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "##### Exemplo de UDA com treinamento adversarial\n",
+    "> DANN (Ganin et al. 2015) - Domain-Adversarial Training of Neural Networks"
    ]
   },
   {
@@ -843,9 +831,9 @@
     }
    },
    "source": [
-    "Precisamos forçar nossa CNN a aprender características das formas dos dígitos apenas, não das distribuições de cores.\n",
+    "Precisamos forçar uma CNN a aprender características das formas dos dígitos apenas, não das distribuições de cores.\n",
     "\n",
-    "Nossa abordagem, (com base em Ganin et al. 2015):"
+    "A abordagem, (com base em Ganin et al. 2015):"
    ]
   },
   {
@@ -862,6 +850,18 @@
     "- Treinar o classificador de dígitos com dados do domínio de origem e o classificador de domínio com dados de ambos os domínios.\n",
     "\n",
     "<img src=\"img/ganin_da.png\" width=\"1400\" />"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\\begin{equation}\n",
+    "    \\begin{matrix}\n",
+    "    \\underset{\\underbrace{E(\\theta_f,\\theta_y,\\theta_d)}}{} \\\\L_{total} \\end{matrix} =\n",
+    "    \\begin{matrix} \\underset{\\underbrace{\\frac{1}{n} \\sum_{i=1}^{n} L_y^i (\\theta_f,\\theta_y)}}{} \\\\L_{y} \\end{matrix} - \\lambda\n",
+    "    \\begin{matrix} \\underset{\\underbrace{\\biggl( \\frac{1}{n} \\sum_{i=1}^{n} L_d^i (\\theta_f,\\theta_d) + \\frac{1}{n^\\prime} \\sum_{i=1}^{n^\\prime} L_d^i (\\theta_f,\\theta_d) \\biggr)}}{} \\\\L_d \\end{matrix} \\text{.}\n",
+    "\\end{equation}"
    ]
   },
   {
