:sparkles: feat: insert loss total of dann

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -856,12 +856,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "\\begin{equation}\n",
-    "    \\begin{matrix}\n",
-    "    \\underset{\\underbrace{E(\\theta_f,\\theta_y,\\theta_d)}}{} \\\\L_{total} \\end{matrix} =\n",
-    "    \\begin{matrix} \\underset{\\underbrace{\\frac{1}{n} \\sum_{i=1}^{n} L_y^i (\\theta_f,\\theta_y)}}{} \\\\L_{y} \\end{matrix} - \\lambda\n",
-    "    \\begin{matrix} \\underset{\\underbrace{\\biggl( \\frac{1}{n} \\sum_{i=1}^{n} L_d^i (\\theta_f,\\theta_d) + \\frac{1}{n^\\prime} \\sum_{i=1}^{n^\\prime} L_d^i (\\theta_f,\\theta_d) \\biggr)}}{} \\\\L_d \\end{matrix} \\text{.}\n",
-    "\\end{equation}"
+    "$$\n",
+    "L_{total} = \\frac{1}{n} \\sum_{i=1}^{n} L_y^i (\\theta_f,\\theta_y) - \\lambda \\left( \\frac{1}{n} \\sum_{i=1}^{n} L_d^i (\\theta_f,\\theta_d) + \\frac{1}{n^\\prime} \\sum_{i=1}^{n^\\prime} L_d^i (\\theta_f,\\theta_d) \\right).\n",
+    "$$"
    ]
   },
   {
