:recycle: refactor: corrigindo nome do modelo

--- a/aula02/aula02.ipynb
+++ b/aula02/aula02.ipynb
@@ -586,7 +586,7 @@
     }
    ],
    "source": [
-    "# Imdb - DEEP CORAL - BERT\n",
+    "# Imdb - DANN - BERT\n",
     "model = DANN(lambda_=2, Xt=Xt, metrics=[\"acc\", \"mse\"], random_state=0)\n",
     "model.fit(Xs, ys, epochs=100, verbose=0)\n",
     "\n",
